package edu.hitsz.aircraft.factory;

import edu.hitsz.aircraft.AbstractAircraft;

public interface AircraftFactory {
    public abstract AbstractAircraft createAircraft();
}
