@startuml
abstract class AbstractAircraft{
    # maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
}
class MobEnemy{
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}
class EliteEnemy{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}
interface AircraftFactory{
    +{abstract} createAircraft(): AbstractAircraft
}
class EliteEnemyFactory{
    + createAircraft():AbstractAircraft
}
class MobEnemyFactory{
    + createAircraft():AbstractAircraft
}
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AircraftFactory <|.. EliteEnemyFactory
AircraftFactory <|.. MobEnemyFactory
AbstractAircraft <.. AircraftFactory

abstract class BaseItem{
    + BaseItem(int locationX, int locationY, int speedX, int speedY)
    + {abstract} work(HeroAircraft):void
}
interface ItemFactory{
    + createItem():BaseItem
}
class BloodFactory{
    + createItem():BaseItem
}
class BombFactory{
    + createItem():BaseItem
}
class FireFactory{
    + createItem():BaseItem
}
class Blood{
    + work(HeroAircraft):void
}
class Bomb{
    + work(HeroAircraft):void
}
class Fire{
    + work(HeroAircraft):void
}
BaseItem <.. ItemFactory
BaseItem <|-- Blood
BaseItem <|-- Bomb
BaseItem <|-- Fire
ItemFactory <|.. BloodFactory
ItemFactory <|.. BombFactory
ItemFactory <|.. FireFactory
@enduml
